# update-service

./: Cargo.toml  Dockerfile  README.md  build.rs  compose.yml
.github/workflows/: rust.yml
src/: config.rs  dependencies.rs  email.rs  email_template.html  main.rs  proto.rs
src/rabbitmq/: flights_consumer.rs  mod.rs  tickets_consumer.rs
