[package]
name = "updatesvc"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = { version = "1.6.1", features = ["traces"] }
base64 = "0.22.1"
envy = "0.4.2"
lettre = { version = "0.11.7", default-features = false, features = ["builder", "hostname", "pool", "tokio1", "tracing", "smtp-transport"] }
lettre_email = "0.9.4"
prost = "0.12.6"
prost-types = "0.12.6"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11.0"
